Update shadow and add footer

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         </div>
     </div>
 
+    <footer>
+        <a href="https://github.com/matealves" target="_blank">© Developed by Mateus Alves</a>
+    </footer>
     <script src="assets/js/script.js"></script>
 </body>
 
