Correção de bugs e estilo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
             <div class="hand minute" id="minute"></div>
             <div class="hand second" id="second"></div>
             <div class="center-point" id="point"></div>
+            <div class="indicadores">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
         <div class="time" id="time"></div>
         <div class="date" id="date"></div>
