--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <footer>
-        <a href="https://github.com/matealves" target="_blank">© Developed by Mateus Alves</a>
+        <a href="https://www.linkedin.com/in/mateusalvesds/" target="_blank">© Developed by Mateus Alves</a>
     </footer>
     <script src="assets/js/script.js"></script>
 </body>
